--- a/one_d.html
+++ b/one_d.html
@@ -68,7 +68,7 @@
 	  varying vec2 v_texCoord;
 
 	  // Function returns colour value from previous state row
-    vec4 getNeighbour( int x ){ return texture2D( u_backText, v_texCoord + u_textPixel*vec2( -u_range+x, 1) );  }
+    vec4 getNeighbour( int x ){ return texture2D( u_backText, v_texCoord + u_textPixel*vec2( x-u_range, -1) );  }
 
     // Returns color value of
     vec4 getRule( int x, int y ){ return texture2D( u_rulesText, 0.5*u_rulePixel+u_rulePixel*vec2( x, y ) ); }
@@ -81,13 +81,13 @@
         int row = 0 ; // What row off the rule texture are we on
 
         // ( Loop over columns of ruleset i.e. 2*range +1 )
-        for ( int i = 0; i < 21; i++ ){
+        for ( int i = 0; i < 11; i++ ){
 
           // Check current column against rule value
           for ( int j = 0; j < 20; j++ ){
 
-            if( getNeighbour(i) == getRule( i, row ) ){ break; } // If state and rule value match then move to next row
-            else{ row += int(pow( float(u_numStates), float(u_range -1 -i ) )); }          // Else jump to next value and continue loop
+            if( getNeighbour(i) == getRule( i, row ) ){ break; } // If state and rule value match then move to next column
+            else{ row += int(pow( float(u_numStates), float( 2*u_range-i ) )); }          // Else jump to next value and continue loop
 
           }
 
@@ -113,14 +113,10 @@
 <div id="menus"  class="main noBorder double">
 <div id="internal" class="main noBorder">
 
-<h1 class="main noBorder" style="margin: 5px"> 1-D C.A. </h1>
+<h1 class="main noBorder" style="margin: 5px"> One-Dimensional Cellular Automata </h1>
 <h3>By Zombie-Einstein</h3>
 
-<p >
-Cellular automaton based on John Conway's game of life.
-At each turn each cell measures the state of it's neighbours and
-then updates it's state based on it's current state and the number of alive neighbours.
-</p>
+<p> One dimensional cellular automata implemented using WebGL. The state of each row is determined from the state of cells in the previous row, within a certain range</p>
 
 Fork this project on<br>
 
@@ -136,8 +132,8 @@ Fork this project on<br>
 <button                  onclick="mainCanvas.stepSim()"   class="main" > Step  </button>
 <button id="startbutton" onclick="mainCanvas.startSim()"  class="main" > Run </button>
 <button id="stopbutton"  onclick="mainCanvas.pauseSim()"  class="main" > Pause  </button>
-<button                  onclick="clearCells()"   class="main" > Clear </button>
-
+<button                  onclick="clearCells()"   class="main" > Reset </button>
+<br>
 <strong>Speed:</strong>
 
 slower &#8674; faster
@@ -174,9 +170,6 @@ Width
       <option value="1024" 	>  1024 </option>
       <option value="2048"  >  2048 </option>
   	</select><br>
-    Neighbours
-    <select class="main" id="neighbourhoodSelect" onchange="changeNeighbourhood()"> </select>
-
 </form>
 
 <h2 class="bordersTop"> Update Algorithm </h2>
@@ -189,14 +182,13 @@ Width
 </form>
 <h3> Current Ruleset </h3>
 
-<p>This texture encodes the update rules of each cell: </p>
+<p>These textures encode the update rules of each cell: </p>
 
-<p>- &nbsp; Each cell has access to the sum of its neighbours color values, and compares that value against the sum of values given by this texture.</p>
-<p>- &nbsp;  The blue value is matched if it is below the cells neighbour sum value. This is more effecient when checking that neighbouring cells contain at least one value without having to check all the possible permutations.</p>
-<p>- &nbsp;  Neighbour sum values that leave the state unchanged can be ommitted from this texture, and the current value will be automatically copied to the updated state.</p>
+<p>- &nbsp; Each cell in the current update row determins it's state from the cell in the previous row and it's neighbours within a given range</p>
+<p>- &nbsp; All the permutations for a given number of states and range are automatically generated.</p>
 
 <h3> Toggle Values </h3>
-<p>Click on the rule canvas to toggle this color value of a cell:</p>
+<p>Click on a cell to toggle this color value:</p>
 
 <form class="main" onsubmit="return false" >
 
@@ -207,14 +199,14 @@ Width
 
 </form>
 
-<h3>States</h3>
-<canvas id="statecanvas" class="main " width="185" height=20 > </canvas>
-<h3>Rules</h3>
+<h3>Possible States</h3>
+<canvas id="statecanvas" class="main " width="185" height=20 onclick="currentRuleSet.stateClick(event)"> </canvas>
+<h3>Update Rules</h3>
 <div class="main noBorder" style="position: relative">
 <canvas id="rulecanvas" class="main " width="185" height=300 >
 Too bad your browser does not support the HTML5 canvas.
 </canvas>
-<canvas id ="ruletextoverlay" class="canvasOverlay"   onclick="ruleCanvas.clickEvent(event)" width="185" height=300>
+<canvas id ="ruletextoverlay" class="canvasOverlay"   onclick="currentRuleSet.ruleClick(event)" width="185" height=300>
   Too bad your browser does not support the HTML5 canvas.
 </canvas>
 
@@ -232,10 +224,10 @@ Too bad your browser does not support the HTML5 canvas.
 
 </form>
 
-<h3> Randomly Fill Cells: </h3>
+<h3> Generate Random Seed: </h3>
 
 <form class="main" onsubmit="return false" >
-  <button class="main" onclick="fillRandomCells()" > Fill Cells </button>
+  <button class="main" onclick="fillRandomCells()" > Set </button>
   P(alive)=
   <input type="number" class="main" id="pAlive" min="0" max="1" value ="0.5" step="0.1" >
 </form>
