--- a/advanced.html
+++ b/advanced.html
@@ -44,149 +44,50 @@
 
     </script>
 
-    <!-- Vertex shader for drawing straight lines -->
-
-    <script id="2d-vertex-lines" type="x-shader/x-vertex">
-
-        // Line Vertices
-        attribute vec2 a_vertices;
-
-        void main() { gl_Position = vec4( a_vertices, 0, 1); }
-
-    </script>
-
-    <!-- Draws lines in white -->
-
-   <script id="2d-fragment-lines" type="x-shader/x-fragment">
-
-       precision mediump float;
-
-       void main() { gl_FragColor = vec4(1.0,1.0,1.0,1.0); }
-
-   </script>
-
-    <!-- Sends texture co-ords to the shader which applies GOL rules,
-         but also calculates the sum of neighbour colour values provided by the ruleset texture -->
-
-    <script id="2d-vertex-rules" type="x-shader/x-vertex">
-
-        precision mediump float;
-
-        // Screen and texture co-ords
-        attribute vec2 a_position;
-        attribute vec2 a_texCoord;
-
-        // Raster co-ordinates passed to fragment shader
-        varying vec2 v_texCoord;
-
-        // Ruleset texture ( as also passed to fragment shader )
-        uniform vec2 u_ruleSize;
-        uniform sampler2D u_rulesText;
-
-        // Calculate the sum of the rules neighbours values here then pass to fragment shader
-        // Do this here as it doesn't need to be done individually for each vertex
-        // ( 20 is currently an arbitary limit, what is max array varying for WebGL?? )
-        varying vec4 ruleSum[20];
-
-        // Method to get sum of possible neighbours to check against
-        vec4 getRuleSum( int x, vec2 pixel ){
-
-          vec4 sum = vec4(0.0,0.0,0.0,0.0); // Return vector
-
-          // Sum over the eight (possible) neighbour colour values
-          for( int i = 0; i < 8; i++ ){ sum += texture2D( u_rulesText, 0.5*pixel +pixel * vec2( x, i+int(u_ruleSize.y)-8 ) ); }
-
-          return sum;
-        }
-
-        void main() {
-
-          vec2 ruleUnit = vec2( 1.0, 1.0 )/u_ruleSize;
-
-          for ( int i = 0; i < 20; i++ ){
-            ruleSum[i] = getRuleSum( i+1, ruleUnit ); // Send rule neighbours value sum to array
-            if( i == int( u_ruleSize.x )-2 ){ break;} // Break out of the loop if we've reached the end of the rule texture
-          }
-
-          gl_Position = vec4( a_position, 0, 1);
-
-   		    v_texCoord = a_texCoord;
-
-        }
-
-    </script>
-
     <!-- Fragment shader program with GOL ruleset-->
 
     <script id="2d-fragment-rules" type="x-shader/x-fragment">
 
     precision mediump float;
 
-    // Array of neighbour locations
+    // Array of neighbour locations and number of neighbours
     uniform ivec2 neighbours[8];
     uniform int u_numNeighbours;
 
-    // Previous state texture and dimensions
-	  uniform vec2 u_textureSize;
+    // Previous state texture and pixel dimensions
+	  uniform vec2 u_backPixel;
 	  uniform sampler2D u_backText;
 
-    // Texture that encodes ruleset and it's dimensions
-    uniform vec2 u_ruleSize;
+    // Texture that encodes ruleset and pixel dimension
+    uniform vec2 u_rulePixel;
     uniform sampler2D u_rulesText;
 
     // Varying values passed from vertex shader
 	  varying vec2 v_texCoord;
 
-    // Sum of rule neighbour values passed from vertex
-    varying vec4 ruleSum[20];
 
 	  // Function returns neighbour colour values: between 1 (i.e. 255) or 0
-      vec4 get( int x, int y, vec2 pixel ){ return texture2D( u_backText, v_texCoord + pixel * vec2(x,y) );  }
+    vec4 getNeighbour( int x, int y ){ return texture2D( u_backText, v_texCoord + u_backPixel*vec2(x,y) );  }
+    vec4 getRule( int x, int y ){ return texture2D( u_rulesText, 0.5*u_rulePixel+u_rulePixel*vec2(x,y) ); }
 
-      void main(){
-
-      	// Get co-ordinate values to move one pixel of textures
-      	vec2 onePixel = vec2( 1.0, 1.0 )/u_textureSize;
-        vec2 ruleUnit = vec2( 1.0, 1.0 )/u_ruleSize;
-
+    void main(){
 
         // Initialize average neighbour sum vector
         vec4 neighbourSum = vec4(0.0,0.0,0.0,0.0);
 
         // Sum over neighbours color values
         for ( int i = 0; i < 8; i++ ){
-          neighbourSum += get( neighbours[i].x, neighbours[i].y, onePixel );
-          if( i == (u_numNeighbours-1) ){ break; }
+            neighbourSum += getNeighbour( neighbours[i].x, neighbours[i].y );
+            if( i == (u_numNeighbours-1) ){ break; }
         }
 
-        // Loop over LH column of rule texture and check for matches
-        // (i.e matches current cell state RGBA value to value of rule texture )
-        // ( Max value of loop is arbitary, use break to restrict value, again max value is arbitary)
-        for ( int i = 0; i < 20; i++ ){
+        // Rule texture look up values from current and neighbour color values
+        int x = u_numNeighbours+ int(texture2D(u_backText, v_texCoord).r) +2*int(texture2D(u_backText, v_texCoord).g)+3*int(texture2D(u_backText, v_texCoord).b);
+        int y = int(neighbourSum.r) +int(neighbourSum.g)*u_numNeighbours +int(neighbourSum.b)*u_numNeighbours*u_numNeighbours +1;
 
-          if ( texture2D(u_backText, v_texCoord) == texture2D( u_rulesText, 0.5*ruleUnit+ruleUnit*vec2(0,i) ) ){
+        // Get updated color value from rule texture
+        gl_FragColor = getRule( x, y );
 
-            // Loop over possible neighbour sums
-            for( int j = 0; j < 20; j++ ){
-
-              // Compare sum of this pixels neighbour values against those provided rule texture ( provided by vertex shader )
-
-              // Just check that current neigbours and rule state are the same, this is slow when number of colour states is large
-              // as checks need to be made against all possible permutations of colour combinations
-              // if( ruleSum[j] == neighbourSum ){}
-
-              // Make inequality check on blue channel, more effecient when just wanting to check if a single neighbour satisfies value
-              if( (ruleSum[j].r == neighbourSum.r) && (ruleSum[j].g == neighbourSum.g) && (ruleSum[j].b <= neighbourSum.b) && (ruleSum[j].a == neighbourSum.a) ){
-
-                gl_FragColor = texture2D( u_rulesText, 0.5*ruleUnit+ruleUnit*vec2( j+1, i) );
-                return; // Break out of main if mathching neighbour state found
-
-              }
-            }
-          }
-        }
-        // If no matching rule found then state remains unchanged
-        gl_FragColor = texture2D(u_backText, v_texCoord);
 
       } // End of main
 
@@ -268,53 +169,32 @@ W:
 
 <h2 class="bordersTop"> Update Algorithm </h2>
 
-<form class="main" onsubmit="return false">
-<h3> Load Preset Ruleset </h3>
-  <select class="main" id="loadpreset" onchange="loadAndUpdatePreset()">
-     <option value="custom" >  Custom </option>
-  </select>
-</form>
-<h3> Current Ruleset </h3>
-
-<p>This texture encodes the update rules of each cell: </p>
-
-<p>- &nbsp; Each cell has access to the sum of its neighbours color values, and compares that value against the sum of values given by this texture.</p>
-<p>- &nbsp;  The blue value is matched if it is below the cells neighbour sum value. This is more effecient when checking that neighbouring cells contain at least one value without having to check all the possible permutations.</p>
-<p>- &nbsp;  Neighbour sum values that leave the state unchanged can be ommitted from this texture, and the current value will be automatically copied to the updated state.</p>
-
-<h3> Toggle Values </h3>
-<p>Click on the rule canvas to toggle this color value of a cell:</p>
-
-<form class="main" onsubmit="return false" >
-
-  R: <input type="number" class="main" id="Rrule" min="0" max="255" value ="255" step="1" >
-  G: <input type="number" class="main" id="Grule" min="0" max="255" value ="0" step="1" ><br>
-  B: <input type="number" class="main" id="Brule" min="0" max="255" value ="0" step="1" >
-  A: <input type="number" class="main" id="Arule" min="0" max="255" value ="255" step="1" >
-
-</form>
-
+<h3> Possible States </h3>
+<p> Click to select cell toggle color <p>
+<canvas id="statecanvas" class="main " width="185" height=20 onclick="currentRuleSet.stateClick(event)"> </canvas>
+<h3>Update Rules</h3>
 <div class="main noBorder" style="position: relative">
-<canvas id="rulecanvas" class="main " width="185" height=195 >
+<canvas id="rulecanvas" class="main " width="185" height=300 >
 Too bad your browser does not support the HTML5 canvas.
 </canvas>
-<canvas id ="ruletextoverlay" class="canvasOverlay"   onclick="ruleCanvas.clickEvent(event)" width="185" height=195>
+<canvas id ="ruletextoverlay" class="canvasOverlay"   onclick="currentRuleSet.ruleClick(event)" width="185" height=300>
   Too bad your browser does not support the HTML5 canvas.
 </canvas>
 
 </div>
 
-<h2 class="bordersTop"> Set Cells </h2>
+<button class="main" onclick="currentRuleSet.setRandomRules()"> Random Update Rules </button>
 
-<h3> Insert / Toggle colour </h3>
-<form class="main" onsubmit="return false" >
-
-  R: <input type="number" class="main" id="RCanvas" min="0" max="255" value ="255" step="1" >
-  G: <input type="number" class="main" id="GCanvas" min="0" max="255" value ="0" step="1" ><br>
-  B: <input type="number" class="main" id="BCanvas" min="0" max="255" value ="0" step="1" >
-  A: <input type="number" class="main" id="ACanvas" min="0" max="255" value ="255" step="1" >
-
+<form class="main" onsubmit="return false">
+<h3> Load Preset Ruleset </h3>
+  <select class="main" id="loadpreset" onchange="loadAndUpdatePreset()">
+     <option value="custom" >  Custom </option>
+     <option value="random" >  Random </option>
+  </select>
 </form>
+
+
+<h2 class="bordersTop"> Set Cells </h2>
 
 <h3> Randomly Fill Cells: </h3>
 
@@ -358,7 +238,7 @@ Too bad your browser does not support the HTML5 canvas.
 <script src ="javascript_two_d/main_canvas.js"       ></script>
 
 <script src ="javascript_two_d/ruleset.js"      ></script>
-<script src ="javascript_two_d/presets.js"  		></script>
+<script src ="javascript_two_d/presets(advanced).js"  		></script>
 
 <script src ="javascript_two_d/2D_main(advanced).js"      ></script>
 
