- Code tidy up, canvas_class.js shared by both simulations - Code annotation

--- a/advanced.html
+++ b/advanced.html
@@ -234,7 +234,7 @@ Too bad your browser does not support the HTML5 canvas.
 <script src ="color.js"  		  ></script>
 <script src ="javascript_two_d/HTML_controls.js"></script>
 
-<script src ="javascript_two_d/canvas_class.js" ></script>
+<script src ="canvas_class.js" ></script>
 <script src ="javascript_two_d/main_canvas.js"       ></script>
 
 <script src ="javascript_two_d/ruleset.js"      ></script>
