- Code tidy up - One d rulesets can now be loaded from an integer. This is translated into a base in the number of rules, then each digit represents a state. - Single loop mode added to 1-D

--- a/advanced.html
+++ b/advanced.html
@@ -128,11 +128,7 @@ Fork this project on<br>
 <button                  onclick="clearCells()"   class="main" > Clear </button>
 
 <strong>Speed:</strong>
-
-slower &#8674; faster
-
-<input type="range" class="main slider-width100" id="speedRange" value="20" max="60" min="1">
-<button class="main" onclick="getSimSpeed()" > Update </button>
+1fps<input type="range" class="main slider-width100" id="speedRange" value="20" max="60" min="1" align="top">60fps
 
 <h2 class="bordersTop"> Cell Space </h2>
 <p>Currenly due to the restrictions of WebGL cell numbers must be powers of two. Topology is also currently locked at torus </p>
