--- a/one_d.html
+++ b/one_d.html
@@ -121,17 +121,34 @@
   <a href="index.html" ><button class="main" style="width:80%;" > 2-D Version (Basic) </button></a>
   <a href="advanced.html"    ><button class="main" style="width:80%;" > 2-D Version (Advanced) </button></a>
   </div>
-Fork this project on<br>
 
-<a href="https://github.com/zombie-einstein/Cellular-Automata" target="_blank" >
-<object>
+<!-- Github logo and link -->
+Fork this project on<br>
+<a href="https://github.com/zombie-einstein/Cellular-Automata" target="_blank" style="position: relative; left: 40px;">
+<object >
 <svg   xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="logo" version="1.1" viewBox="200 0 125 140" height="25" width="125" style="fill:#ffffff"><metadata id="metadata23"/><defs id="defs21"/><g id="surface1111" transform="translate(-41.491525,-217.22034)"><path id="path5" d="m140.38 278.65-40.36 0c-1.04 0-1.89 0.84-1.89 1.89l0 19.73c0 1.04 0.84 1.89 1.89 1.89l15.74 0 0 24.52c0 0-3.54 1.2-13.31 1.2-11.53 0-27.64-4.21-27.64-39.63 0-35.42 16.77-40.09 32.52-40.09 13.63 0 19.5 2.4 23.24 3.56 1.17 0.36 2.26-0.81 2.26-1.85l4.5-19.07c0-0.49-0.16-1.07-0.72-1.47-1.52-1.08-10.77-6.26-34.16-6.26-26.94 0-54.57 11.46-54.57 66.56 0 55.1 31.64 63.31 58.3 63.31 22.08 0 35.47-9.43 35.47-9.43 0.55-0.3 0.61-1.08 0.61-1.43l0-61.54c0-1.04-0.85-1.89-1.89-1.89M348.35 229.66c0-1.05-0.83-1.89-1.87-1.89l-22.72 0c-1.04 0-1.88 0.84-1.88 1.89 0 0.01 0 43.91 0 43.91l-35.42 0 0-43.91c0-1.05-0.84-1.89-1.87-1.89l-22.72 0c-1.04 0-1.88 0.84-1.88 1.89l0 118.9c0 1.05 0.84 1.91 1.88 1.91l22.72 0c1.04 0 1.88-0.86 1.88-1.91l0-50.86 35.42 0c0 0-0.06 50.85-0.06 50.86 0 1.05 0.84 1.91 1.88 1.91l22.77 0c1.04 0 1.88-0.86 1.88-1.91zm0 0M183.25 245.27c0-8.18-6.56-14.8-14.65-14.8-8.09 0-14.65 6.61-14.65 14.8 0 8.17 6.57 14.8 14.65 14.8 8.09 0 14.65-6.63 14.65-14.8M181.63 323.48l0-54.88c0-1.04-0.84-1.89-1.88-1.89l-22.65 0c-1.04 0-1.97 1.07-1.97 2.11l0 78.64c0 2.31 1.44 3 3.3 3l20.41 0c2.24 0 2.79-1.1 2.79-3.04zm0 0M434.71 266.89l-22.55 0c-1.03 0-1.87 0.85-1.87 1.9l0 58.3c0 0-5.73 4.2-13.86 4.2-8.13 0-10.29-3.69-10.29-11.65l0-50.84c0-1.05-0.84-1.9-1.87-1.9l-22.88 0c-1.04 0-1.88 0.85-1.88 1.9l0 54.7c0 23.64 13.18 29.43 31.31 29.43 14.87 0 26.86-8.21 26.86-8.21 0 0 0.57 4.33 0.83 4.84 0.26 0.51 0.93 1.03 1.66 1.03L434.72 350.5c1.04 0 1.88-0.85 1.88-1.89l0-79.82c0-1.05-0.84-1.9-1.88-1.9M487.45 331.21c-7.82-0.24-13.12-3.79-13.12-3.79l0-37.66c0 0 5.23-3.21 11.65-3.78 8.12-0.73 15.95 1.73 15.95 21.09 0 20.43-3.53 24.46-14.47 24.13m8.89-66.99c-12.81 0-21.52 5.71-21.52 5.71l0-40.27c0-1.05-0.84-1.89-1.87-1.89l-22.79 0c-1.04 0-1.88 0.84-1.88 1.89l0 118.9c0 1.05 0.84 1.91 1.88 1.91l15.81 0c0.71 0 1.25-0.37 1.65-1.01 0.39-0.64 0.96-5.48 0.96-5.48 0 0 9.32 8.83 26.96 8.83 20.71 0 32.58-10.5 32.58-47.16 0-36.65-18.96-41.44-31.78-41.44M246.93 266.7l-17.04 0c0 0-0.02-22.51-0.02-22.52 0-0.85-0.44-1.28-1.43-1.28l-23.23 0c-0.9 0-1.39 0.4-1.39 1.27l0 23.27c0 0-11.64 2.81-12.43 3.04-0.79 0.23-1.36 0.95-1.36 1.82l0 14.62c0 1.05 0.84 1.9 1.88 1.9l11.91 0 0 35.18c0 26.13 18.33 28.7 30.7 28.7 5.65 0 12.41-1.81 13.53-2.23 0.68-0.25 1.07-0.95 1.07-1.7l0.02-16.09c0-1.05-0.89-1.9-1.88-1.9-0.99 0-3.54 0.41-6.15 0.41-8.37 0-11.21-3.89-11.21-8.93 0-5.03 0-33.43 0-33.43l17.04 0c1.04 0 1.88-0.85 1.88-1.9l0-18.32c0-1.05-0.84-1.89-1.88-1.89" class="s0"/></g></svg>
 </object>
 </a>
 
+<div class="bordersTop" style="clear: both;  overflow: auto;">
+<h2 class="alignLeft"> Controls</h2>
+<div class="alignRight tooltip">
+  <h2 > &#63; </h2>
+  <div class="main tooltiptext">
+    <ul>
+    <li> The cells update one row at a time, starting from whatever pattern is in the bottom row of cells.</li>
+    <li> Step: Update the next row of cells.</li>
+    <li> Run: Continuously Update rows.</li>
+    <li> Pause: Pause the updates at the current row.</li>
+    <li> Reset: Clear the cells and start updating from the bottom row again.</li>
+    <li> Loop Mode: Either continuous loops over the cell space, or a single interation of all the rows.</li>
+    <li> Use the slider to control the updates performed per second</li>
+    </ul>
+  </div>
+</div>
+</div>
 
-<h2 class="bordersTop"> Sim Controls </h2>
-
+<!-- Controls for running the sim & speed -->
 <button                  onclick="mainCanvas.stepSim()"   class="main" > Step  </button>
 <button id="startbutton" onclick="mainCanvas.startSim()"  class="main" > Run </button>
 <button id="stopbutton"  onclick="mainCanvas.pauseSim()"  class="main" > Pause  </button>
@@ -141,13 +158,15 @@ Fork this project on<br>
 <form>
   Loop Mode:
 	<select id="loopMode" class="main" >
-  <option value="c" 	  >  Continuos 	</option>
-  <option value="f" 	>  Single 	  </option>
+  <option value="c" >  Continuous </option>
+  <option value="f" >  Single 	  </option>
   </select>
 </form>
-<strong>Speed:</strong>
-1fps<input type="range" class="main slider-width100" id="speedRange" value="20" max="60" min="1" align="top">60fps
 
+<strong>Speed:</strong>
+1fps<input type="range" class="main slider-width100" id="speedRange" value="20" max="60" min="1" style="float:middle">60fps
+
+<!-- number of cells -->
 <h2 class="bordersTop"> Cell Space </h2>
 <p>Currenly due to the restrictions of WebGL cell numbers must be powers of two. Topology is also currently locked at torus </p>
 
@@ -179,16 +198,27 @@ Width:
   	</select><br>
 </form>
 
-<h2 class="bordersTop"> Update Algorithm </h2>
+<div class="bordersTop" style="clear: both;  overflow: auto;">
+<h2 class="alignLeft"> Update Algorithm</h2>
+<div class="alignRight tooltip">
+  <h2 > &#63; </h2>
+  <div class="main tooltiptext">
+    <ul>
+    <li>The upper texture contains the possible cell colour states.</li>
+    <li>The lower texture encodes the ruleset and is passed to the WebGL shader to perform the update calculation.</li>
+    <li>The permutations of the possible rules are generated automatically on the left for a given number of states and range of cells.</li>
+    <li>The right hand column show the colour of the updated cell, given the arrangement of neighbour states.</li>
+    <li>You can select a colour and toggle the color of the cells, you can update the permutations for a given set of states by clicking the button.</li>
+    <li>The dropdown menu provides some interesting preset rulesets, as well as emty rulesets for larger ranges (R) and number of states (S). </li>
+    <li>Rulesets can be generated from an integer value. The integer is resolved in the base of the number of states,
+        in this base each digit therefore references a state (this value quickly gets very large for larger numbers of states and neighbours).</li>
+    <li>Random rulesets can also be generated, which randomly selects a state from the possible values, for each permutation.</li>
+    </ul>
+  </div>
+</div>
+</div>
 
-<h3> Current Ruleset </h3>
-
-<p>These textures encode the update rules of each cell: </p>
-
-<p>- &nbsp; Each cell in the current update row determins it's state from the cell in the previous row and it's neighbours within a given range</p>
-<p>- &nbsp; All the permutations for a given number of states and range are automatically generated.</p>
-
-<h3> Toggle Values </h3>
+<strong> Toggle Values </strong>
 <p>Click on a cell to toggle this color value:</p>
 
 <form class="main" onsubmit="return false" >
@@ -200,10 +230,11 @@ Width:
 
 </form>
 
-<h3>Possible States</h3>
+<strong>Possible States</strong>
 <canvas id="statecanvas" class="main " width="185" height=20 onclick="currentRuleSet.stateClick(event)"> </canvas>
-<button class="main" onclick="currentRuleSet.updatePermutations()" > Generate permutations </button>
-<h3>Update Rules</h3>
+<button class="main" onclick="currentRuleSet.updatePermutations()" > Generate permutations </button><br>
+
+<strong>Update Rules</strong>
 <div class="main noBorder" style="position: relative">
 <canvas id="rulecanvas" class="main " width="185" height=300 >
 Too bad your browser does not support the HTML5 canvas.
@@ -230,9 +261,21 @@ Too bad your browser does not support the HTML5 canvas.
 <strong> Or set a random ruleset: </strong>
 <button class="main" onclick="currentRuleSet.setRandomResults()"> Random Update Rules </button>
 
-<h2 class="bordersTop"> Set Cells </h2>
+<div class="bordersTop" style="clear: both;  overflow: auto;">
+<h2 class="alignLeft"> Initial Seed</h2>
+<div class="alignRight tooltip">
+  <h2 > &#63; </h2>
+  <div class="main tooltiptext">
+    <ul>
+    <li>Set the intial seed of the first (bottom) row.</li>
+    <li>Manually set cells using the mouse.</li>
+    <li>Seeds can also be set from an integer, resolved in the base of the number of states each digit then refers to a state. i.e 1 sets a single cell in the first non-zero color value;
+    </ul>
+  </div>
+</div>
+</div>
 
-<strong> Insert / Toggle colour </strong>
+<strong> Initial Seed / Toggle colour </strong>
 <form class="main" onsubmit="return false" >
 
   R: <input type="number" class="main" id="RCanvas" min="0" max="255" value ="255" step="1" >
@@ -242,19 +285,18 @@ Too bad your browser does not support the HTML5 canvas.
 
 </form>
 
-<strong> Generate Random Seed: </strong>
-
+<strong> Set Seed: </strong>
+<p>Click on cells to toggle their value, or insert an intial seed: </p>
 <form class="main" onsubmit="return false" >
-  P(alive)=
+  <strong>Random:</strong>P(alive)=
   <input type="number" class="main" id="pAlive" min="0" max="1" value ="0.5" step="0.1" >
   <button class="main" onclick="fillRandomCells()" > Set </button>
 </form>
 
-<strong> Click on a cell to: </strong>
-
-<form>
-	<!-- Form options are created dynamically from array of patterns (see patterns.js) -->
-	<select id="presetlist" class="main" > </select>
+<form class="main" onsubmit="return false" >
+  <strong> Or set a seed from an integer: </strong>
+  <input type="number" class="main" id="seedint" min="0" max="10000" value="1" step="1" style="width: 75%">
+  <button class="main" onclick="setSeedFromHTMLInt()" > Set </button>
 </form>
 
 <h2 class="bordersTop"> Colours Scheme</h2>
@@ -278,7 +320,6 @@ Too bad your browser does not support the HTML5 canvas.
 <script src ="color.js"        ></script>
 <script src ="canvas_class.js" ></script>
 
-<script src ="javascript_one_d/patterns.js"		  ></script>
 <script src ="javascript_one_d/HTML_controls.js"></script>
 <script src ="javascript_one_d/main_canvas.js"  ></script>
 <script src ="javascript_one_d/ruleset.js"      ></script>
